<resources>
    <string name="app_name">GetFitLA</string>
    <string name="Activities">Activities</string>
    <string name="Nutrition">Nutrition</string>
    <string name="Exercise">Exercise</string>
    <string name="Exercise_page">Sample</string>
    <string name="title_activity_maps">Map</string>
    <string name="button_equipment">Equipment</string>
    <string name="button_no_equipment">No Equipment</string>
    <string name="button_breakfast">Breakfast</string>
    <string name="button_lunch">Lunch</string>
    <string name="button_dinner">Dinner</string>
    <string name="button_individual_exercise">Individual Activities</string>
    <string name="button_group_exercise">Group Activities</string>
    <string name="location_permission_denied">This sample requires location
        permission to enable the \'my location\' layer. Please try again and
        grant access to use the location.\nIf the permission has been permanently
        denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="permission_rationale_location">Access to the location service is required to
        demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="Title" translatable="false">Get Fit L.A.</string>
    <string name="kml_url">http://www.google.com/maps/d/u/0/kml?forcekml=1&amp;mid=1LuVbYbhZpTtSep4GIRD0BEXWeKc</string>

    <!-- Begin strings that take in data to from adapter to be used in the detailed activities-->

    <string name="Recipe_Title">Recipe</string>
    <string name="Recipe_PrepTime">10 minutes</string>
    <string name="Recipe_ServingSize">1 serving</string>
    <string name="Recipe_Calories">100 calories</string>
    <string name="Recipe_Equipment">Pot, Pan</string>
    <string name="Recipe_Ingredients">-1 Veggie <br/> -2 Meats</string>
    <string name="Recipe_Process">1) Put the veggie in the pot. <br/> 2) Put the meats in the pan.</string>
    <string name="Exercise_Title">Exercise</string>
    <string name="Exercise_Instructions">This is how you do the exercise.</string>
    <string-array name ="nutritionCategories">
        <item> No Filter</item>
        <item> Breakfasts </item>
        <item> Lunches </item>
        <item> Dinners </item>
    </string-array>
    <string-array name="exerciseBooleans">
        <item> No Filter</item>
        <item> Equipment</item>
        <item> No Equipment</item>
    </string-array>
</resources>