<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <TextView
            android:id="@+id/recipe_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/alegreya"

            android:text="@string/Recipe_Title"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/white"
            android:textSize="36sp" />

        <ImageView
            android:id="@+id/nutrition_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:adjustViewBounds="false"
            app:srcCompat="@android:drawable/btn_star" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/recipe_preptime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:fontFamily="@font/alegreya"
                android:text="@string/Recipe_PrepTime"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/recipe_servings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:fontFamily="@font/alegreya"
                android:text="@string/Recipe_ServingSize"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/recipe_calories"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:fontFamily="@font/alegreya"
                android:text="@string/Recipe_Calories"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/alegreya"
                android:textColor="@android:color/white"
                android:text="Equipment"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/recipe_equipment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/white"
                android:fontFamily="@font/alegreya"
                android:text="@string/Recipe_Equipment"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/alegreya"
                android:textColor="@android:color/white"
                android:text="Ingredients"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/recipe_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/white"
                android:fontFamily="@font/alegreya"
                android:text="@string/Recipe_Ingredients"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/alegreya"
                android:textColor="@android:color/white"
                android:text="Directions"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/recipe_directions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/white"
                android:fontFamily="@font/alegreya"
                android:text="@string/Recipe_Process"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>


</ScrollView>